--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include MANIFEST.in
 include README.txt
-include pydecnet.conf
+include samples/pydecnet.conf
 include pydecnet
 recursive-include decnet *.py
+recursive-include samples *.py
