--- a/samples/pydecnet.conf
+++ b/samples/pydecnet.conf
@@ -1,3 +1,4 @@
 # Configuration file
-circuit tap0 --device tap:/dev/tap0 --console Plugh --random-address
+#circuit tap0 --device tap:/dev/tap0 --console Plugh --random-address
+circuit tap0 --device tap0 --console Plugh --random-address
 
