--- a/pydecnet/samples/pydecnet.conf
+++ b/pydecnet/samples/pydecnet.conf
@@ -1,4 +1,5 @@
 # Configuration file
 #circuit tap0 --device tap:/dev/tap0 --console Plugh --random-address
 circuit tap0 --device tap0 --console Plugh --random-address
+routing 1.73
 
