Beginnings of routing layer support -- LAN endnode init layer is basically in place.
git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk@41 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/pydecnet/samples/pydecnet.conf
+++ b/pydecnet/samples/pydecnet.conf
@@ -1,5 +1,5 @@
 # Configuration file
 #circuit tap0 --device tap:/dev/tap0 --console Plugh --random-address
 circuit tap0 --device tap0 --console Plugh --random-address
-routing 1.73
+routing 1.73 --type endnode
 
