--- a/samples/pydecnet.conf
+++ b/samples/pydecnet.conf
@@ -1,5 +1,5 @@
 # Configuration file
 #circuit tap0 --device tap:/dev/tap0 --console Plugh --random-address
 circuit tap0 --device tap0 --console Plugh --random-address
-routing 1.73
+routing 1.73 --type endnode
 
