--- a/samples/pydecnet.conf
+++ b/samples/pydecnet.conf
@@ -1,5 +1,13 @@
 # Configuration file
 #circuit tap0 --device tap:/dev/tap0 --console Plugh --random-address
 circuit tap0 --device tap0 --console Plugh --random-address
-routing 1.73 --type endnode
+#routing 1.73 --type endnode
+routing 1.1 --type l1router
+node 1.42 e11
+node 1.43 simh43
+node 1.69 akmain
+node 1.73 ak486
+node 1.124 koning
+node 1.1 python
+
 
