--- a/samples/pydecnet.conf
+++ b/samples/pydecnet.conf
@@ -1,8 +1,8 @@
 # Configuration file
-#circuit tap-0 --device tap:/dev/tap0 --console Plugh --random-address
+circuit tap-0 --device tap:/dev/tap0 --console Plugh --random-address
 #circuit tap-0 --device tap0 --console Plugh --random-address
 circuit dmc-0 --device 127.0.0.1:11042 --type SimhDMC
-circuit dmc-1 --device secondary:11043 --type SimhDMC
+#circuit dmc-1 --device secondary:11043 --type SimhDMC
 #routing 1.73 --type endnode
 routing 1.1 --type l2router
 @nodes.conf
