--- a/samples/pydecnet.conf
+++ b/samples/pydecnet.conf
@@ -1,10 +1,11 @@
 # Configuration file
 #circuit tap-0 --device tap:/dev/tap0 --console Plugh --random-address
 #circuit tap-0 --device tap0 --console Plugh --random-address
+circuit eth-1 --device en1 
 #circuit dmc-0 --device 127.0.0.1:11042 --type SimhDMC
 #circuit dmc-0 --device 127.0.0.1:11143 --type SimhDMC
-circuit dmc-0 --device localhost:7000 --type Multinet
+#circuit dmc-0 --device localhost:7000 --type Multinet
 #circuit dmc-1 --device secondary:11043 --type SimhDMC
-#routing 1.73 --type endnode
-routing 1.1 --type l2router
+routing 9.55 --type l1router
 @nodes.conf
+system --http-port=8955
