--- a/pydecnet/samples/pydecnet.conf
+++ b/pydecnet/samples/pydecnet.conf
@@ -5,7 +5,8 @@ circuit eth-1 --device en1
 #circuit dmc-0 --device 127.0.0.1:11042 --type SimhDMC
 #circuit dmc-0 --device 127.0.0.1:11143 --type SimhDMC
 #circuit dmc-0 --device localhost:7000 --type Multinet
-#circuit dmc-1 --device secondary:11043 --type SimhDMC
+#circuit dmc-1 --device localhost:11043:secondary --type SimhDMC
+circuit gre-0 --device localhost --type GRE
 routing 9.55 --type l1router
 @nodes.conf
 system --http-port=8955
