Update manifest for doc
git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk/pydecnet@94 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,3 +5,5 @@ include samples/pydecnet.conf
 include pydecnet
 recursive-include decnet *.py
 recursive-include samples *.py
+recursive-include doc *
+recursive-exclude doc *~
