--- a/samples/pydecnet.conf
+++ b/samples/pydecnet.conf
@@ -1,12 +1,12 @@
 # Configuration file
-#circuit tap-0 --device tap:/dev/tap0 --console Plugh --random-address
+circuit tap-0 --device tap:/dev/tap0 --console Plugh --random-address
 #circuit tap-0 --device tap0 --console Plugh --random-address
-circuit eth-1 --device en1 
+#circuit eth-1 --device en1 
 #circuit dmc-0 --device 127.0.0.1:11042 --type SimhDMC
 #circuit dmc-0 --device 127.0.0.1:11143 --type SimhDMC
 #circuit dmc-0 --device localhost:7000 --type Multinet
 #circuit dmc-1 --device localhost:11043:secondary --type SimhDMC
-circuit gre-0 --device localhost --type GRE
+#circuit gre-0 --device localhost --type GRE
 routing 9.54 --type l2router
 @nodes.conf
-system --http-port=8954
+system --http-port=8954 --api-socket=/Users/pkoning/Documents/svn/pydecnet/decnetsocket
