--- a/samples/pydecnet.conf
+++ b/samples/pydecnet.conf
@@ -1,7 +1,7 @@
 # Configuration file
 circuit tap-0 --device tap:/dev/tap0 --console Plugh --random-address
-#circuit tap-0 --device tap0 --console Plugh --random-address
-#circuit eth-1 --device en1 
+#circuit tap-0 --device pcap:tap0 --console Plugh --random-address
+#circuit eth-1 --device pcap:en1 
 #circuit dmc-0 --device 127.0.0.1:11042 --type SimhDMC
 #circuit dmc-0 --device 127.0.0.1:11143 --type SimhDMC
 #circuit dmc-0 --device localhost:7000 --type Multinet
