--- a/pydecnet/MANIFEST.in
+++ b/pydecnet/MANIFEST.in
@@ -5,5 +5,6 @@ include samples/pydecnet.conf
 include pydecnet
 recursive-include decnet *.py
 recursive-include samples *.py
+recursive-include tests *.py
 recursive-include doc *
 recursive-exclude doc *~
