Add sample bridge config to kit
git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk/pydecnet@244 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include MANIFEST.in
 include LICENSE
 include README.txt
 include samples/pydecnet.conf
+include samples/bridge.conf
 include pydecnet
 recursive-include decnet *.py
 recursive-include samples *.py
