--- a/pydecnet/samples/pydecnet.conf
+++ b/pydecnet/samples/pydecnet.conf
@@ -1,13 +1,13 @@
 # Configuration file
-circuit tap-0 --device tap:/dev/tap0 --console Plugh --random-address
-#circuit tap-0 --device pcap:tap0 --console Plugh --random-address
-#circuit eth-1 --device pcap:en1 
-#circuit dmc-0 --device 127.0.0.1:11042 --type SimhDMC
-#circuit dmc-0 --device 127.0.0.1:11143 --type SimhDMC
-#circuit dmc-0 --device localhost:7000 --type Multinet
-#circuit dmc-0 --device localhost:700:connect --type Multinet
-#circuit dmc-1 --device localhost:11043:secondary --type SimhDMC
-#circuit gre-0 --device localhost --type GRE
+circuit tap-0 Ethernet tap:/dev/tap0 --console Plugh --random-address
+#circuit tap-0 Ethernet pcap:tap0 --console Plugh --random-address
+#circuit eth-1 Ethernet pcap:en1 
+#circuit dmc-0 SimhDMC 127.0.0.1:11042
+#circuit dmc-0 SimhDMC 127.0.0.1:11143
+#circuit dmc-0 Multinet localhost:7000
+#circuit dmc-0 Multinet localhost:700:connect
+#circuit dmc-1 SimhDMC localhost:11043:secondary
+#circuit gre-0 GRE localhost
 routing 9.54 --type l2router
 @nodes.conf
 system --http-port=8954 --api-socket=/Users/pkoning/Documents/svn/pydecnet/decnetsocket
