Initial DDCMP support
git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk/pydecnet@259 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ include README.txt
 include samples/pydecnet.conf
 include samples/bridge.conf
 include pydecnet
+include crc.py
 recursive-include decnet *.py
 recursive-include samples *.py
 recursive-include tests *.py
