Add (basic) intercept support
git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk@273 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/pydecnet/samples/nodes.conf
+++ b/pydecnet/samples/nodes.conf
@@ -1,6 +1,8 @@
 # List of nodes
-node 9.54 python
-node 9.55 ni1d
+#node 9.54 python
+#node 9.55 ni1d
+node 1.43 python
+node 1.42 ni1d
 
 node 11.3 A11PI        
 node 11.1023 A11RTR    
