--- a/samples/nodes.conf
+++ b/samples/nodes.conf
@@ -1,6 +1,8 @@
 # List of nodes
-node 9.54 python
-node 9.55 ni1d
+#node 9.54 python
+#node 9.55 ni1d
+node 1.43 python
+node 1.42 ni1d
 
 node 11.3 A11PI        
 node 11.1023 A11RTR    
