1. Add --source to http configuration 2. Add timestamp to HTTP top banner 3. Add --log-config feature, use dictionary based configuration machinery    for logging.  Add sample files for --log-config
git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk/pydecnet@396 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,7 +6,6 @@ include samples/bridge.conf
 include pydecnet
 include crc.py
 recursive-include decnet *.py
-recursive-include samples *.py
+recursive-include samples *.py *.json *.yaml
 recursive-include tests *.py
-recursive-include doc *
-recursive-exclude doc *~
+recursive-include doc *.txt
