--- a/samples/nodes.conf
+++ b/samples/nodes.conf
@@ -108,6 +108,7 @@ node 2.20 VENTI
 node 2.400 APOLLO
 node 2.401 CYPHER
 node 2.402 MENTOR
+node 2.403 CONDOR
 node 2.520 TOMMYT
 node 2.522 VENTI2
 node 3.47 RVDSXL
@@ -210,8 +211,6 @@ node 7.82 BITXOU
 node 8.100 PPVX01
 node 8.101 PPVX02
 node 8.102 PPVX03
-node 8.195 KETURA
-node 8.199 MOSHIX
 node 8.200 TACO
 node 8.201 HIRAME
 node 8.202 INARI
@@ -448,6 +447,8 @@ node 28.8 CUTLER
 node 28.9 MSTG84
 node 28.26 RULLF
 node 28.41 RULLFS
+node 29.1 A29RT1
+node 29.2 A29RT2
 node 29.100 DUNE
 node 29.101 IX
 node 29.102 CALADN
@@ -455,12 +456,19 @@ node 29.103 KAITN
 node 29.104 ROSSAK
 node 29.105 ARAKIS
 node 29.106 SALUSA
+node 29.107 ANBUS
 node 29.108 WALACH
+node 29.109 TUPILE
+node 29.110 TLEILX
 node 29.200 PIVAX0
 node 29.201 PIVAX1
 node 29.202 PIVAX2
 node 29.203 PIVAX3
 node 29.204 PIVAX4
+node 29.205 PIRSTS
+node 29.206 ONAPI4
+node 29.207 VMS046
+node 29.208 PIRTVX
 node 29.209 PIVAXN
 node 30.1 FRODO
 node 30.2 MV80
@@ -472,6 +480,7 @@ node 30.7 LTC
 node 30.10 LAN40
 node 30.11 RDP1
 node 30.12 RDP2
+node 30.15 CBVRP3
 node 31.1 IMPVAX
 node 31.2 KARMA
 node 31.3 PYRTR
@@ -494,7 +503,13 @@ node 31.26 W2000S
 node 31.27 MACOS7
 node 31.28 RST101
 node 31.29 TWENEX
+node 31.30 VAXSTN
+node 31.31 XLIV
+node 31.32 PIPY
+node 31.33 XL
+node 31.34 NANAJU
 node 31.50 SHAKTI
+node 31.60 IBM390
 node 31.100 SUBWAY
 node 31.101 BMT
 node 31.102 IRT
@@ -504,6 +519,8 @@ node 31.120 MAKOTO
 node 31.130 LARRY
 node 31.131 MOE
 node 31.132 CURLY
+node 31.140 MOSHIX
+node 31.141 KETURA
 node 31.1020 MOKSHA
 node 31.1021 PYDNET
 node 31.1023 IMPRTR
@@ -520,11 +537,16 @@ node 34.200 FARGO
 node 34.201 FULBCK
 node 34.1022 SHIVA
 node 34.1023 A34RTR
+node 35.70 THOMAS
+node 35.71 HENRY
+node 35.91 WIZVAX
+node 35.1023 A35RTR
 node 39.1 MASON
 node 39.10 ROXY
 node 39.11 BOSCO
 node 41.1 PYTHON
 node 41.2 NI1D
+node 41.41 PYTS41
 node 42.1 CANADA
 node 42.2 DAFFY
 node 42.3 FUZZY
@@ -534,6 +556,8 @@ node 42.6 EARTH
 node 42.7 MOON
 node 42.8 FRICK
 node 42.9 FRACK
+node 42.10 BOB
+node 42.11 DOUG
 node 42.42 BET
 node 42.1022 HUB
 node 42.1023 A42RTR
