--- a/samples/pydecnet.conf
+++ b/samples/pydecnet.conf
@@ -3,11 +3,21 @@ circuit tap-0 Ethernet tap:/dev/tap0 --console Plugh --random-address
 #circuit tap-0 Ethernet pcap:tap0 --console Plugh --random-address
 #circuit eth-1 Ethernet pcap:en1 
 #circuit dmc-0 SimhDMC 127.0.0.1:11042
-#circuit dmc-0 SimhDMC 127.0.0.1:11143
 #circuit dmc-0 Multinet localhost:7000
 #circuit dmc-0 Multinet localhost:700:connect
 #circuit dmc-1 SimhDMC localhost:11043:secondary
+#circuit dmc-2 DDCMP tcp:12345:localhost:32154 --cost 3
+#circuit dmc-2 DDCMP udp:12345:localhost:32154 --cost 3
+#circuit dmc-0 DDCMP serial:/dev/tty.usbserial-FTVSKM26:19200 --t3 120 --qmax 2
 #circuit gre-0 GRE localhost
+
 routing 9.54 --type l2router
-@nodes.conf
-system --http-port=8954 --api-socket=/Users/pkoning/Documents/svn/pydecnet/decnetsocket
+
+node @nodenames.dat
+
+system --ident "Sample PyDECnet configuration"
+
+# This replaces the default built-in mirror object which is
+# implemented as a Python module within PyDECnet by a functionally
+# equivalent one that runs as a subprocess.
+object --number 25 --name MIRROR --file decnet/applications/mirror.py
