--- a/pydecnet/MANIFEST.in
+++ b/pydecnet/MANIFEST.in
@@ -9,3 +9,4 @@ recursive-include decnet *.py
 recursive-include samples *.py *.json *.yaml
 recursive-include tests *.py
 recursive-include doc *.txt
+recursive-include tools *.py
