Node config file updater tool
git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk/pydecnet@495 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,3 +9,4 @@ recursive-include decnet *.py
 recursive-include samples *.py *.json *.yaml
 recursive-include tests *.py
 recursive-include doc *.txt
+recursive-include tools *.py
