Bugfixes in remote logging support. Add event handling to mapper and use these to generate incremental map updates.
git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk@521 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/pydecnet/samples/std-logging.yaml
+++ b/pydecnet/samples/std-logging.yaml
@@ -52,3 +52,10 @@ handlers:
 root:
   level: INFO
   handlers: [ dnhandler ]
+loggers:
+  # DECnet does all its logging to the "decnet" logger, which by
+  # default simply passes everthing to the root logger.
+  decnet:
+     passthrough: true
+  decnet.mapper:
+     passthrough: true
