Add DnMemoryHandler feature.
This alllows logging to be directed to a buffer (a size limited queue)
from which the oldest entries are discarded when the buffer fills up.
The buffered entries are written to another handler only if something
interesting happens: (a) an exception, or (b) a WARNING (by default)
or more severe message.

Messages related to startup and exit are logged, for context.

The two dev-logging sample files have been changed to show how this
feature can be used to make trace logging more efficient in space and
time. 


git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk@544 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/pydecnet/samples/dev-logging.yaml
+++ b/pydecnet/samples/dev-logging.yaml
@@ -15,13 +15,24 @@ formatters:
     format: "{asctime}: {threadName} {filename}.{lineno}: {message}"
     style: "{"
 handlers:
-  tracehandler:
-    # 10 files, 20 MB per file max
+  tracefilehandler:
+    # 10 files, 2 MB per file max
     class: logging.handlers.RotatingFileHandler
     formatter: traceformatter
     filename: /var/log/decnet/decnet-trace.log
-    maxBytes: 20000000
+    maxBytes: 2000000
     backupCount: 10
+  tracehandler:
+    # Handler to buffer up to 100 events and flush those when
+    # something interesting happens.  This reduces trace overhead
+    # and trace log size.
+    class: decnet.logging.DnMemoryHandler
+    # Entries that are actually logged go to this handler:
+    target: tracefilehandler
+    # Queue size and log level that causes a flush
+    # (these are the default values for this handler)
+    capacity: 100
+    flushLevel: WARNING
   dnhandler:
     # File handler.
     class: logging.FileHandler
