--- a/samples/pydecnet.conf
+++ b/samples/pydecnet.conf
@@ -1,15 +1,16 @@
 # Configuration file
 circuit tap-0 Ethernet tap:/dev/tap0 --console Plugh --random-address
-#circuit tap-0 Ethernet pcap:tap0 --console Plugh --random-address
+#circuit tap-1 Ethernet pcap:tap0 --console Plugh --random-address
 #circuit eth-1 Ethernet pcap:en1 
-#circuit dmc-0 Multinet localhost:7000
-#circuit dmc-0 Multinet localhost:700:connect
-#circuit dmc-2 DDCMP tcp:12345:localhost:32154 --cost 3
-#circuit dmc-2 DDCMP udp:12345:localhost:32154 --cost 3
-#circuit dmc-0 DDCMP serial:/dev/tty.usbserial-FTVSKM26:19200 --t3 120 --qmax 2
+#circuit mul-0 Multinet localhost:7000 --latency 47
+#circuit mul-1 Multinet localhost:700:connect
+#circuit dmc-0 DDCMP tcp:12345:localhost:32154 --cost 3
+#circuit dmc-1 DDCMP udp:12345:localhost:32154 --cost 3
+#circuit dmc-2 DDCMP serial:/dev/tty.usbserial-FTVSKM26:19200 --t3 120 --qmax 2
 #circuit gre-0 GRE localhost
 
 routing 9.54 --type l2router
+node 9.54 SAMPLE
 
 node @nodenames.dat
 
