--- a/pydecnet/MANIFEST.in
+++ b/pydecnet/MANIFEST.in
@@ -14,3 +14,4 @@ recursive-include doc *.txt
 recursive-include decnet/resources *.css *.svg *.txt *.png *.js
 recursive-exclude decnet/resources/__pycache__ *
 recursive-exclude decnet/resources/images/__pycache__ *
+include decnet/GITREV
